demo-service/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demo-service
spec:
  type: ClusterIP
  selector:
    app: demo-service
  ports:
    - port: 8080
      targetPort: 8080
